# earthscope-sfg-workflows

./: .gitignore  .pre-commit-config.yaml  LICENSE  PIXI.md  README.md  myst.yml  netlify.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-docs.yml  test-python.yml
dev/: NCC1-preproc-manifest.json  dev_manifest.py  dev_new_stationsession.py  issues-2026-05-14.md  preprocess-manifest.json
dev/docs/: ARCHITECTURE.md  ENVIRONMENTS.md  audit_report.md  layers-and-abstractions.md  roles-and-layers-roughdraft.md
docs/: api_toc.yml  development.md  index.md  installation.md  myst.yml.template
docs/api/: earthscope_sfg_workflows.config.env_config.md  earthscope_sfg_workflows.config.file_config.md  earthscope_sfg_workflows.config.garpos_config.md  earthscope_sfg_workflows.config.loadconfigs.md  earthscope_sfg_workflows.data_mgmt.adapters.memory.md  earthscope_sfg_workflows.data_mgmt.archives.archive_pull.md  earthscope_sfg_workflows.data_mgmt.archives.earthscope_archive.md  earthscope_sfg_workflows.data_mgmt.catalog.sql_asset_catalog.md  earthscope_sfg_workflows.data_mgmt.core.md  earthscope_sfg_workflows.data_mgmt.filestore.disk_filestore.md  earthscope_sfg_workflows.data_mgmt.model.md  earthscope_sfg_workflows.data_mgmt.ports.md  earthscope_sfg_workflows.data_mgmt.utils.md  earthscope_sfg_workflows.logging.loggers.md  earthscope_sfg_workflows.modeling.garpos_tools.data_prep.md  earthscope_sfg_workflows.modeling.garpos_tools.functions.md  earthscope_sfg_workflows.modeling.garpos_tools.load_utils.md  earthscope_sfg_workflows.modeling.garpos_tools.plotting.md  earthscope_sfg_workflows.modeling.garpos_tools.schemas.md  earthscope_sfg_workflows.pipelines.config.md  earthscope_sfg_workflows.pipelines.exceptions.md  earthscope_sfg_workflows.pipelines.plotting.md  earthscope_sfg_workflows.pipelines.qc_pipeline.md  earthscope_sfg_workflows.pipelines.shotdata_gnss_refinement.md  earthscope_sfg_workflows.pipelines.sv3_pipeline.md  earthscope_sfg_workflows.prefiltering.schemas.md  earthscope_sfg_workflows.prefiltering.utils.md  earthscope_sfg_workflows.services.ingest_service.md  earthscope_sfg_workflows.services.processing_service.md  earthscope_sfg_workflows.services.sync_service.md  earthscope_sfg_workflows.utils.command_line_utils.md  earthscope_sfg_workflows.utils.custom_warnings_exceptions.md  earthscope_sfg_workflows.utils.model_update.md  earthscope_sfg_workflows.workflows.session.md  earthscope_sfg_workflows.workflows.workflow_handler.md  earthscope_sfg_workflows.workflows.workspace.md  index.md
examples/geolab/: get_data.py
examples/preprocessing/: intermediate_processing.py  novatel_to_rinex.py  preprocessing.py  qc_pipeline_processing.py
examples/s3sync/: uploadtbds3.py
plans/: rfc-a-data-mgmt-ports-and-adapters.md  rfc-b-workflow-facade.md
plans/prds/: 2026-05-05-workflow-base-and-facades.md
scripts/: generate_api_md.py
src/earthscope_sfg_cli/: INDEX.md  README.md  __init__.py  __main__.py  commands.py  manifest.py  utils.py
src/earthscope_sfg_workflows/: __init__.py
src/earthscope_sfg_workflows/binary_ops/: __init__.py  binary_paths.py  crinex_operations.py  novatel_binary_operations.py
src/earthscope_sfg_workflows/config/: README.md  __init__.py  env_config.py  file_config.py  loadconfigs.py  shotdata_filters.py
src/earthscope_sfg_workflows/data_mgmt/: README.md  __init__.py  _archive_urls.py  core.py  model.py  ports.py  utils.py
src/earthscope_sfg_workflows/data_mgmt/adapters/: __init__.py  disk_filestore.py  earthscope_archive.py  local_fs.py  memory.py  s3_fs.py  sql.py  test_adapters.py
src/earthscope_sfg_workflows/data_mgmt/archives/: __init__.py  archive_pull.py  earthscope_archive.py  errors.py  test_archive.py
src/earthscope_sfg_workflows/data_mgmt/assetcatalog/: handler.py  sql.py
src/earthscope_sfg_workflows/data_mgmt/catalog/: port.py  sql_asset_catalog.py  testing.py
src/earthscope_sfg_workflows/data_mgmt/directorymgmt/: handler.py
src/earthscope_sfg_workflows/data_mgmt/filestore/: disk_filestore.py  port.py  testing.py
src/earthscope_sfg_workflows/data_mgmt/ingestion/: archive_pull.py  datadiscovery.py
src/earthscope_sfg_workflows/logging/: loggers.py
src/earthscope_sfg_workflows/modeling/: __init__.py
src/earthscope_sfg_workflows/modeling/garpos_tools/: __init__.py  data_prep.py  functions.py  garpos_handler.py  load_utils.py  plotting.py  schemas.py
src/earthscope_sfg_workflows/pipelines/: config.py  exceptions.py  plotting.py  qc_pipeline.py  shotdata_gnss_refinement.py  sv3_pipeline.py
src/earthscope_sfg_workflows/prefiltering/: README.md  __init__.py  schemas.py  utils.py
src/earthscope_sfg_workflows/services/: __init__.py  ingest_service.py  pipeline_service.py  processing_service.py  sync_service.py
src/earthscope_sfg_workflows/utils/: __init__.py  command_line_utils.py  custom_warnings_exceptions.py  model_update.py
src/earthscope_sfg_workflows/workflows/: README.md  __init__.py  base.py  facades.py  session.py  workflow_handler.py  workspace.py
src/earthscope_sfg_workflows/workflows/midprocess/: __init__.py  mid_processing.py  utils.py
src/earthscope_sfg_workflows/workflows/modeling/: __init__.py  garpos_handler.py
src/earthscope_sfg_workflows/workflows/pipelines/: __init__.py  config.py  gnss_rinex_base.py  plotting.py  qc_pipeline.py  shotdata_gnss_refinement.py  sv2_ops.py  sv3_pipeline.py
src/earthscope_sfg_workflows/workflows/preprocess_ingest/: __init__.py  data_handler.py
src/earthscope_sfg_workflows/workflows/services/: __init__.py  ingest_service.py  layout_service.py  pipeline_service.py  sync_service.py
src/earthscope_sfg_workflows/workflows/utils/: protocols.py
tests/: test_data_mgmt_adapters_prod.py  test_data_mgmt_contracts.py  test_garpos.py  test_package_import.py  test_submodule_imports.py  test_sv3_pipeline_integration.py  test_workflows_base_and_facades.py  utils.py
tests/fixtures/NCC1_2025_A_1126/: NCC12510.25o  NCC12510.rnx  campaign_meta.json  kin_2025251_ncc1.kin  kin_position_sample.parquet  res_2025251_ncc1.res  shotdata_pre_sample.parquet
(+2 files in other folders)
