[project]
name = "earthscope-sfg-workflows"
version = "0.1.0"
description = "Workflow orchestration and data management for EarthScope Seafloor Geodesy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mike Gottlieb", email = "mike.gottlieb@earthscope.org" },
  { name = "Franklyn Dunbar", email = "franklyn.dunbar@earthscope.org" },
  { name = "Rachel Akie", email = "rachel.akie@earthscope.org" }
]
dependencies = [
  "earthscope-sfg-tools[tiledb]>=0.1.0",
  "boto3>=1.40",
  "botocore>=1.40",
  "sqlalchemy>=2.0",
  "python-dotenv>=1.1",
  "tqdm>=4.60",
  "seaborn>=0.13",
  "earthscope-sdk>=1.1",
  "earthscope-cli>=1.0",
  "gnatss>=0.3.1",
  "s3fs>=2024.5.0,<2025",
  "pyarrow>=21.0",
  "scikit-learn>=1.4",
  "typer>=0.9",
  "rich>=13.0",
  "pyyaml>=6.0",
  "pride-ppp @ git+https://github.com/EarthScope/GNSSommelier.git#subdirectory=packages/pride-ppp"
]

[project.scripts]
sfgtools = "earthscope_sfg_cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/earthscope_sfg_workflows", "src/earthscope_sfg_cli"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]


[tool.pixi.dependencies]
python = ">=3.11,<3.14"
pytest = ">=8"
ruff = ">=0.4"
fsspec = ">=2024.5.0,<2025"
universal_pathlib = "<=0.3.10"

[tool.pixi.pypi-dependencies]
earthscope_sfg_workflows = { path = ".", editable = true }
earthscope_sfg_tools = { git = "https://github.com/EarthScope/earthscope-sfg-tools.git", branch = "feature/rinex-compression-utils", extras = ["tiledb"] }

[tool.pixi.feature.tiledb.dependencies]
tiledb = ">=2.27"

[tool.pixi.feature.tiledb.pypi-dependencies]
tiledb = ">=0.30"

[tool.pixi.feature.jupyter.dependencies]
jupyter = ">=1.1.1"

[tool.pixi.environments]
default = { features = ["tiledb"], solve-group = "default" }
geolab = { features = ["jupyter", "tiledb"], solve-group = "default" }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -v", description = "Run workflow test suite" }
lint = { cmd = "ruff check src/ tests/", description = "Lint source and tests" }
format-check = { cmd = "ruff format --check src/ tests/", description = "Check formatting" }
format = { cmd = "ruff format src/ tests/", description = "Auto-format source" }

# Clone and compile garpos from source (importable via PYTHONPATH set in activation)
clone-garpos = { cmd = "bash -c 'if [ -d .pixi/garpos ]; then git -C .pixi/garpos pull; else git clone https://github.com/s-watanabe-jhod/garpos.git .pixi/garpos; fi'" }
compile-garpos = { cmd = "gfortran -shared -fPIC -fopenmp -O3 -o lib_raytrace.so sub_raytrace.f90 lib_raytrace.f90", cwd = ".pixi/garpos/bin/garpos_v102/f90lib", depends-on = ["clone-garpos"] }
test-garpos = { cmd = "pytest tests/test_garpos.py -v", depends-on = ["compile-garpos"] }

# Clone and install PRIDE-PPPAR (binaries land in .pixi/.PRIDE_PPPAR_BIN, added to PATH in activation)
clone-pride = { cmd = "bash -c 'if [ -d .pixi/PRIDE-PPPAR ]; then git -C .pixi/PRIDE-PPPAR pull; else git clone --depth 1 https://github.com/PrideLab/PRIDE-PPPAR.git .pixi/PRIDE-PPPAR; fi'" }
install-pride = { cmd = "chmod +x install.sh && echo 'N' | HOME=$PIXI_PROJECT_ROOT/.pixi ./install.sh", cwd = ".pixi/PRIDE-PPPAR", depends-on = ["clone-pride"] }
test-pride = { cmd = "chmod +x test.sh && ./test.sh", cwd = ".pixi/PRIDE-PPPAR/example", depends-on = ["install-pride"] }

setup = { depends-on = ["compile-garpos", "install-pride"] }
test-setup = {depends-on = ["test-garpos","test-pride"]}


[tool.pixi.activation]
[tool.pixi.activation.env]
DYLD_LIBRARY_PATH = "$PIXI_PROJECT_ROOT/.pixi/envs/$PIXI_ENVIRONMENT_NAME/lib:$DYLD_LIBRARY_PATH"
LD_LIBRARY_PATH = "$PIXI_PROJECT_ROOT/.pixi/envs/$PIXI_ENVIRONMENT_NAME/lib:$LD_LIBRARY_PATH"
PATH = "$PIXI_PROJECT_ROOT/.pixi/.PRIDE_PPPAR_BIN:$PATH"
PYTHONPATH = "$PIXI_PROJECT_ROOT/.pixi/garpos/bin:$PYTHONPATH"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["TID251"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"earthscope_sfg_workflows.data_mgmt.assetcatalog".msg = "Removed in RFC-A. Use `workspace.assets` (AssetQueryFacade) or `data_mgmt.adapters.sql.SqlAssetStore` directly."
"earthscope_sfg_workflows.data_mgmt.directorymgmt".msg = "Removed in RFC-A. Use `workspace.layout` (LayoutFacade) or `data_mgmt.model` layout dataclasses."
"earthscope_sfg_workflows.data_mgmt.ingestion".msg = "Removed in RFC-A. Use `workspace.ingest` (IngestFacade) or `data_mgmt.adapters.earthscope_archive.EarthScopeArchive`."
